debug/examples/stop-on-start.out
$ pipcc --silent hello.c -o hello
$ echo $PIP_STOP_ON_START
onstart.cmd@2
$ pip-exec -n 4 ./hello
Hello World
Hello World
PiP-INFO[37149(R):R] PiP task[2] (PID=37152) is SIGSTOPed and executing 'onstart.cmd' script
Hello World
### onstart.cmd ### hello 37152 2
  File "/home/ahori/git/pip-2/install/bin/pips", line 228
    from __future__ import print_function
    ^
SyntaxError: from __future__ imports must occur at the beginning of the file
Hello World
$
